Fix:: paragraph overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,13 +125,3 @@ ul li a {
   font-weight: bold;
   letter-spacing: 0.1rem;
 }
-
-@media (max-width: 400px) {
-  .hero-section {
-    margin-top: 10px;
-  }
-
-  .hero-section p {
-    font-size: 1.2rem !important;
-  }
-}
